charts/code-server/ingress-code.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code
spec:
  ingressClassName: traefik
  rules:
  - host: code.local
    http:
      paths:
      - backend:
          service:
            name: code
            port:
              number: 8443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - code.local
    secretName: code-tls
