charts/code-server/ingress-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-frontend
  namespace: code-server
spec:
  ingressClassName: traefik
  rules:
  - host: code-a80214d6-5deb-4b5e-9ddb-0cdcbaee91ec.local
    http:
      paths:
      - backend:
          service:
            name: code-a80214d6-5deb-4b5e-9ddb-0cdcbaee91ec
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
