charts/code-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code
  namespace: code-server
spec:
  ingressClassName: traefik
  rules:
  - host: code.kw.local
    http:
      paths:
      - backend:
          service:
            name: code-c574505c-d70e-4609-b728-e379b8fe403f
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - code.kw.local
    secretName: local-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.100.1
